--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browserify-middleware": "^5.0.2",
     "cookie-parser": "^1.3.5",
     "crypto-js": "^3.1.4",
     "dotenv": "^1.1.0",
